--- a/package.json
+++ b/package.json
@@ -11,32 +11,33 @@
     "server:dev": "tsx watch server/src/index.ts"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^13.5.4",
-    "@reduxjs/toolkit": "^1.9.7",
-    "react-redux": "^8.1.3",
-    "redux-thunk": "^2.4.2",
-    "socket.io-client": "^4.7.2",
-    "clsx": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
+    "@headlessui/react": "^1.7.17",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-select": "^2.0.0",
-    "@headlessui/react": "^1.7.17",
-    "tailwindcss": "^3.3.6"
+    "@reduxjs/toolkit": "^1.9.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.56.0",
     "eslint-config-next": "^13.5.4",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "tsx": "^4.7.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
