--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,19 +9,22 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
-    "jsx": "preserve", // ← Add this line
-    "jsxImportSource": "react", // ← Add this line
+    "jsx": "react-jsx",  // Changed from "preserve"
+    // Remove jsxImportSource when using react-jsx
+    
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    
     /* Path aliases */
     "baseUrl": ".",
     "paths": {
@@ -31,21 +34,11 @@
     },
     "allowJs": true,
     "incremental": true,
-    "esModuleInterop": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+    "esModuleInterop": true
   },
   "include": [
-    "src",
+    "src/**/*",
     ".next/types/**/*.ts"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
   ],
   "exclude": [
     "node_modules"
