--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server:dev": "tsx watch server/src/index.ts"
+    "predeploy": "npm run build",
+    "deploy": "touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -35,6 +36,7 @@
     "autoprefixer": "^10.4.23",
     "eslint": "^8.56.0",
     "eslint-config-next": "^13.5.4",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "tsx": "^4.7.0",
