--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.0.0",
     "@reduxjs/toolkit": "^1.9.7",
     "class-variance-authority": "^0.7.0",
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "redux-thunk": "^2.4.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
